@@ -1,3 +1,8 @@
+2008-11-13  Jesse Jones  <jesjones@mindspring.com>
+
+	* NullDerefAnalysis.cs: Added a comment describing one way we can fix
+	the latest problem with the rule.
+
 2008-11-13  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* dataflow/CFG.cs: Extract helper class MethodPrinter. Patch by
